# matchit

./: '  .rustfmt.toml  ;  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  rust.yml  safety.yml
benches/: bench.rs
examples/: hyper.rs  main.rs
fuzz/fuzz_targets/: insert_and_match.rs
src/: app.rs  chi.rs  endpoint.rs  error.rs  escape.rs  extractors.rs  handler.rs  lib.rs  matcher.rs  node.rs  params.rs  path.rs  request.rs  responder.rs  response.rs  route.rs  router.rs  service.rs  tree.rs
tests/: insert.rs  match.rs  merge.rs  remove.rs  tree.rs
